deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-template
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: site-template
  template:
    metadata:
      labels:
        app: site-template
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-content
        configMap:
          name: site-template-config
